feat: implement device binding, ECDSA attendance marking, and device change request workflow